All_Component_DX/force-app/main/default/objects/Timesheet_Day_Entry__c/fields/Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_Week__c</fullName>
    <formula>CASE(MOD(  Timsheet_Day__c  - DATE(1900, 1, 6), 7), 0, $Label.COMM001_TAG141, 1, $Label.COMM001_TAG135, 2,$Label.COMM001_TAG136, 3, $Label.COMM001_TAG137, 4, $Label.COMM001_TAG138, 5, $Label.COMM001_TAG139, 6,$Label.COMM001_TAG140,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of the Week</label>
    <type>Text</type>
</CustomField>