All_Component_DX/force-app/main/default/objects/Timesheet_Day_Entry__c/fields/IsHoliday__c.field-meta.xml
<CustomField>
    <fullName>IsHoliday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Holiday</label>
    <type>Checkbox</type>
</CustomField>