All_Component_DX/force-app/main/default/objects/Timesheet_Day_Entry__c/fields/SM_Working_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SM_Working_Minutes__c</fullName>
    <label>Working Duration (In Mins)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>